[package]
name = "mdc"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas", "highlighter", "debug", "tokio", "lazy", "advanced", ]}
tokio = {version = "*", features = ["fs"]}
rfd = "*"
structopt = "*"
structopt-derive = "*"
regex = "*"
lyon_algorithms = "1.0"